Color Section Added With Responsiveness-3.0 (Issue Is addesressing on numbering visibility on mobiles Screens)

--- a/style.css
+++ b/style.css
@@ -970,6 +970,11 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
 .opacity-60 {
   opacity: 0.6;
 }
